Angular12アプリケーションを起動します。

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Google Phone Gallery</title>
@@ -23,6 +23,8 @@
     <script src="phone-list/phone-list.component.js"></script>
     <script src="phone-detail/phone-detail.module.js"></script>
     <script src="phone-detail/phone-detail.component.js"></script>
+    <script defer src="lib/zone.js/bundles/zone.umd.js"></script>
+    <script defer src="app.js"></script>
   </head>
   <body>
 
