--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,6 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-
-    <div class="view-container">
-      <div ng-view class="view-frame"></div>
-    </div>
-
+    <phonecat-app></phonecat-app>
   </body>
 </html>
